--- a/gro/www/mapa.html
+++ b/gro/www/mapa.html
@@ -70,7 +70,7 @@
 
 
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSamWqREZiKOdEQKgB-g2HwKuz-2EkVI0&callback=initMap" id="map">
+    src="https://maps.googleapis.com/maps/api/js?key=(aqui vai a chave)&callback=initMap" id="map">
     </script>
   </body>
 </html>
